# bazel_rules_detekt

./: .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  WORKSPACE.release.bazel  maven_install.json  pmd_ruleset.xml  rules_detekt_dependencies_install.json
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: .bazelrc  BUILD.bazel  buildifier.yaml  ci.bazelrc  ci.yaml  main.yml  publish.yaml  release.yaml  release.yml  release_prep.sh
detekt/: BUILD  BUILD.release.bazel  defs.bzl  dependencies.bzl  dependencies.release.bzl  detekt.bzl  distribution.bzl  extensions.bzl  final_result.sh.tpl  rules.bzl  toolchain.bzl  toolchains.bzl  toolchains.release.bzl  versions.bzl
detekt/wrapper/: BUILD  BUILD.release.bazel
detekt/wrapper/src/main/java/io/buildfoundation/bazel/detekt/: Application.java  ExecutionUtils.java  Main.java  Platform.java  WriterFactory.java
detekt/wrapper/src/main/java/io/buildfoundation/bazel/detekt/execute/: Detekt.java  Executable.java  ExecutableResult.java  WorkerExecutable.java
detekt/wrapper/src/main/java/io/buildfoundation/bazel/detekt/stream/: Streams.java  WorkerStreams.java
detekt/wrapper/src/main/java/io/buildfoundation/bazel/detekt/value/: WorkRequest.java  WorkResponse.java
detekt/wrapper/src/main/kotlin/bazel/detekt/: Application.kt  Detekt.kt  Executable.kt  Platform.kt  Result.kt  Streams.kt  WorkerExecutable.kt  WorkerStreams.kt  main.kt
detekt/wrapper/src/main/kotlin/io/buildfoundation/bazel/detekt/: Application.kt  Detekt.kt  Executable.kt  Platform.kt  Result.kt  Streams.kt  WorkerExecutable.kt  WorkerStreams.kt  main.kt
detekt/wrapper/src/main/kotlin/io/buildfoundation/bazel/detekt/execute/: Detekt.kt  Executable.kt  Result.kt  WorkerExecutable.kt
detekt/wrapper/src/main/kotlin/io/buildfoundation/bazel/detekt/stream/: Streams.kt  WorkerStreams.kt
detekt/wrapper/src/main/kotlin/io/buildfoundation/bazel/rulesdetekt/wrapper/: Application.kt  Detekt.kt  Executable.kt  Platform.kt  Result.kt  SandboxExecutor.kt  SandboxedExecutor.kt  Streams.kt  WorkerExecutable.kt  WorkerStreams.kt  main.kt
detekt/wrapper/src/main/proto/: worker_protocol.proto
detekt/wrapper/src/test/java/io/buildfoundation/bazel/detekt/: ApplicationOneShotTests.java  ExecutionUtilsTests.java  TestsSuite.java
detekt/wrapper/src/test/java/io/buildfoundation/bazel/detekt/execute/: DetektExecutableTests.java  WorkerExecutableTests.java
detekt/wrapper/src/test/java/io/buildfoundation/bazel/detekt/stream/: WorkerStreamsTests.java
detekt/wrapper/src/test/kotlin/bazel/detekt/: DetektExecutableTests.kt  OneShotApplicationTests.kt  TestsSuite.kt  WorkerExecutableTests.kt  WorkerStreamsTests.kt
detekt/wrapper/src/test/kotlin/io/buildfoundation/bazel/detekt/: DetektExecutableTests.kt  OneShotApplicationTests.kt  TestsSuite.kt  WorkerExecutableTests.kt  WorkerStreamsTests.kt
detekt/wrapper/src/test/kotlin/io/buildfoundation/bazel/detekt/execute/: DetektExecutableTests.kt  WorkerExecutableTests.kt
detekt/wrapper/src/test/kotlin/io/buildfoundation/bazel/detekt/stream/: WorkerStreamsTests.kt
detekt/wrapper/src/test/kotlin/io/buildfoundation/bazel/rulesdetekt/wrapper/: DetektExecutableTests.kt  OneShotApplicationTests.kt  TestsSuite.kt  WorkerExecutableTests.kt  WorkerStreamsTests.kt
detekt/wrapper/src/testFixtures/java/io/buildfoundation/bazel/detekt/: TestPlatform.java
detekt/wrapper/src/testFixtures/java/io/buildfoundation/bazel/detekt/execute/: TestExecutable.java
detekt/wrapper/src/testFixtures/java/io/buildfoundation/bazel/detekt/stream/: TestStreams.java
detekt/wrapper/src/testFixtures/kotlin/bazel/detekt/: TestDetekt.kt  TestExecutable.kt  TestPlatform.kt
detekt/wrapper/src/testFixtures/kotlin/io/buildfoundation/bazel/detekt/: TestDetekt.kt  TestExecutable.kt  TestPlatform.kt
detekt/wrapper/src/testFixtures/kotlin/io/buildfoundation/bazel/detekt/execute/: TestDetekt.kt  TestExecutable.kt
detekt/wrapper/src/testFixtures/kotlin/io/buildfoundation/bazel/rulesdetekt/wrapper/: TestDetekt.kt  TestExecutable.kt  TestPlatform.kt
docs/: BUILD  attrs.md  generate.sh  header_template.vm  rule.md  rule_template.vm  rules_detekt.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  detekt_config_lenient.yml
e2e/smoke/src/main/kotlin/: Sample.kt
tests/analysis/: BUILD  tests.bzl
tests/bashunit/: BUILD
tests/integration/: BUILD  baseline.xml  detekt_baseline.xml  detekt_type_resolution.yml  integration_helper.sh  integration_test.sh  strict-config-empty-blocks.yml  strict-config.yml  strict_config_baseline.xml  strict_config_max_issues.yml  suite.sh  test_baseline.sh  test_baseline_plugin.sh  test_config_file_lenient.sh  test_config_filegroup_lenient.sh  test_default_attributes.sh  test_html_report.sh  test_report_html.sh  test_report_text.sh  test_report_xml.sh  test_strict_config.sh  test_strict_config_baseline.sh  test_strict_config_filegroup.sh  test_strict_config_filegroup_baseline.sh  test_xml_report.sh
tests/integration/src/main/kotlin/bazel/detekt/: main.kt
tests/integration/src/main/kotlin/io/buildfoundation/bazel/detekt/: A.kt  B.kt  C.kt
tests/integration/src/main/kotlin/io/buildfoundation/bazelrulesdetekt/integrationtest/: A.kt  Main.kt
tests/integration/testFixtures/basic-android/: AndroidManifest.xml  BUILD
tests/integration/testFixtures/basic-android/src/android/tests/integration/android/: AndroidApi.kt  AndroidClasspath.kt  AndroidStatic.kt
tests/integration/testFixtures/basic-jvm/: BUILD
tests/integration/testFixtures/basic-jvm/src/jvm/tests/integration/jvm/: JvmApi.kt  JvmClasspath.kt  JvmStatic.kt
tests/integration/testFixtures/custom-rule/: BUILD  detekt_custom_rule.yml
tests/integration/testFixtures/custom-rule/src/custom/tests/integration/custom/: CustomRuleViolation.kt
tests/unit/: BUILD
tests/unit/src/test/java/io/buildfoundation/bazel/detekt/: ExecutionUtilsTests.java  (+1 more)
utils/: detekt_release.bzl
(+3 files in other folders)
