"Bazel dependencies"

module(
    name = "rules_detekt",

    # NOTE:
    # version = "",
    #
    # Always leave version unset or set to "" (the default). The default value
    # can prevent issues when the module is used via non-registry overrides
    # (e.g. https://github.com/bazel-contrib/rules_go/issues/4380).
    #
    # The publish.yaml GitHub Action sets the version in the registry to the
    # release version by patching this MODULE.bazel file in the pull request to
    # the BCR.
    #
    # For more info, see this Slack thread:
    # https://bazelbuild.slack.com/archives/CA31HN1T3/p1750406404452179
    compatibility_level = 1,
    repo_name = "bazel_rules_detekt",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "package_metadata", version = "0.0.6")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_java", version = "8.15.2")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "bazel_worker_api", version = "0.0.10")
bazel_dep(name = "bazel_worker_java", version = "0.0.10")
bazel_dep(name = "rules_pmd", version = "0.4.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True, repo_name = "io_bazel_stardoc")

bazel_dep(name = "bazelrc-preset.bzl", version = "1.6.0")

detekt = use_extension("//detekt:extensions.bzl", "detekt")
use_repo(detekt, "detekt_cli_all")

register_toolchains("//detekt:default_toolchain")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven", dev_dependency = True)
maven.install(
    name = "rules_detekt_dependencies",
    artifacts = [
        "junit:junit:4.13.2",
        "io.gitlab.arturbosch.detekt:detekt-formatting:1.23.1",
    ],
    fail_if_repin_required = True,
    lock_file = "//:maven_install.json",
)
use_repo(maven, "rules_detekt_dependencies", "unpinned_rules_detekt_dependencies")
