module(
    name = "rules_detekt",
    version = "0.8.1.1",
    compatibility_level = 1,
    repo_name = "bazel_rules_detekt",
)

register_toolchains("//detekt:default_toolchain")

detekt = use_extension("//detekt:extensions.bzl", "detekt")
use_repo(detekt, "detekt_cli_all")

bazel_dep(name = "rules_android", version = "0.7.2")
bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "bazel_worker_api", version = "0.0.10")
bazel_dep(name = "bazel_worker_java", version = "0.0.10")
bazel_dep(name = "rules_pmd", version = "0.4.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven", dev_dependency = True)
maven.install(
    name = "rules_detekt_dependencies",
    artifacts = [
        "junit:junit:4.13.2",
        "io.gitlab.arturbosch.detekt:detekt-formatting:1.23.1",
    ],
    fail_if_repin_required = True,
    lock_file = "//:maven_install.json",
)
use_repo(maven, "rules_detekt_dependencies", "unpinned_rules_detekt_dependencies")

bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True, repo_name = "io_bazel_stardoc")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)
bazel_dep(name = "rules_bazel_integration_test", version = "0.37.1", dev_dependency = True)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
use_repo(
    bazel_binaries,
    "bazel_binaries",
    "bazel_binaries_bazelisk",
    "build_bazel_bazel_.bazelversion",
)

# The bashunit framework used by our integration tests is sourced from the
# Bazel project's own test infrastructure. Pinned to the 9.1.0 tag so the
# files are content-addressable.
http_file = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_file",
)

http_file(
    name = "bazel_unittest_bash",
    sha256 = "3175e1f9acd35ad8abe6c678bc6bc78601d6388a0a2e45a7e8bc595b0fd9aa80",
    urls = ["https://raw.githubusercontent.com/bazelbuild/bazel/9.1.0/src/test/shell/unittest.bash"],
    downloaded_file_path = "unittest.bash",
)

http_file(
    name = "bazel_unittest_utils_sh",
    sha256 = "cf1d33c1a7b6a7382af79436aab0bd411f9f16bc3aa6eb3527b5ac7b1688170a",
    urls = ["https://raw.githubusercontent.com/bazelbuild/bazel/9.1.0/src/test/shell/unittest_utils.sh"],
    downloaded_file_path = "unittest_utils.sh",
)
