workspace(name = "rules_detekt")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Runtime

## Dependencies

load("//detekt:dependencies.bzl", "rules_detekt_dependencies")

rules_detekt_dependencies()

## Toolchains

load("//detekt:toolchains.bzl", "rules_detekt_toolchains")

rules_detekt_toolchains()

# Testing

## JVM External

rules_jvm_external_version = "6.9"

rules_jvm_external_sha = "3c41eae4226a7dfdce7b213bc541557b8475c92da71e2233ec7c306630243a65"

http_archive(
    name = "rules_jvm_external",
    sha256 = rules_jvm_external_sha,
    strip_prefix = "rules_jvm_external-{v}".format(v = rules_jvm_external_version),
    url = "https://github.com/bazel-contrib/rules_jvm_external/releases/download/{v}/rules_jvm_external-{v}.tar.gz".format(v = rules_jvm_external_version),
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    name = "rules_detekt_dependencies",
    artifacts = [
        "junit:junit:4.13.2",
        "io.gitlab.arturbosch.detekt:detekt-formatting:1.23.1",
    ],
    fail_if_repin_required = True,
    maven_install_json = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2/",
    ],
)

load("@rules_detekt_dependencies//:defs.bzl", "pinned_maven_install")

pinned_maven_install()

## Skylib

skylib_version = "1.4.1"

skylib_sha = "b8a1527901774180afc798aeb28c4634bdccf19c4d98e7bdd1ce79d1fe9aaad7"

http_archive(
    name = "bazel_skylib",
    sha256 = skylib_sha,
    url = "https://github.com/bazelbuild/bazel-skylib/releases/download/{v}/bazel-skylib-{v}.tar.gz".format(v = skylib_version),
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

# Documenting

## Stardoc

stardoc_version = "0.5.3"

stardoc_sha = "3fd8fec4ddec3c670bd810904e2e33170bedfe12f90adf943508184be458c8bb"

http_archive(
    name = "io_bazel_stardoc",
    sha256 = stardoc_sha,
    url = "https://github.com/bazelbuild/stardoc/releases/download/{v}/stardoc-{v}.tar.gz".format(v = stardoc_version),
)

load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")

stardoc_repositories()
