load("@buildifier_prebuilt//:rules.bzl", "buildifier")

buildifier(
    name = "buildifier.check",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "buildifier.fix",
    disabled_rewrites = [
        "label",
    ],
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
)
