load("@rules_java//java:defs.bzl", "java_binary", "java_import")

java_import(
    name = "wrapper",
    jars = ["libwrapper.jar"],
    visibility = ["//visibility:private"],
)

java_import(
    name = "worker_protocol_java_proto",
    jars = ["libworker_protocol_proto-speed.jar"],
    srcjar = "worker_protocol_proto-speed-src.jar",
    visibility = ["//visibility:private"],
)

java_binary(
    name = "bin",
    main_class = "io.buildfoundation.bazel.detekt.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":wrapper",
        ":worker_protocol_java_proto",
        "@rules_detekt_dependencies//:io_gitlab_arturbosch_detekt_detekt_cli",
        "@rules_detekt_dependencies//:io_reactivex_rxjava3_rxjava",
    ],
)
